chore: fix analytics

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -14,3 +14,16 @@
 <script>
 	document.title = "Carbon Components Angular";
 </script>
+
+<!-- Google Analytics v4 setup -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G070S732G6"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-G070S732G6', {
+		send_page_view: false
+	});
+</script>
+
