--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -51,7 +51,8 @@
 <script
 	src="//1.www.s81c.com/common/stats/ibm-common.js"
 	type="text/javascript"
-	async="async"></script>
+	async="async">
+</script>
 
 <style>
 	footer {
